2024-02-21  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/hrz.c: Provide writer.
	* coders/tga.c: 32 bit TGA colormap is expected to have a valid
	alpha channel.

2024-02-20  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/tga.c: TGA reader seems to ignore image orientation,
	fixed now.

2024-02-18  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* jpeg/*: Update JPEG builtin library to 9f.

2024-02-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jpeg.c (FreeMagickClientData): Assure that jpeg_pixels is
	non-NULL before dereferencing it. Resolves oss-fuzz issue 66666:
	"graphicsmagick:coder_DCM_fuzzer: Null-dereference READ in
	ReadJPEGImage".  This is an issue introduced by yesterday's
	submission.

2024-02-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/enum_strings.c (StringToCompressionType): Recognize
	"LosslessJPEG" as indicating LosslessJPEGCompression.

	* coders/jpeg.c (WriteJPEGImage): Added support for writing lossy
	or lossless 12 bits, and lossless 16-bits using libjpeg-turbo-3.0.
	Added the -define options 'jpeg:data-precision',
	'jpeg:lossless-precision', and 'jpeg:lossless-predictor', to
	provide control over the parameters used.  Please note that most
	applications do not support lossless JPEG compression (and only
	support a sample size of 8) so take care not to use these features
	if it not known that all involved software can support them!

2024-02-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jpeg.c (WriteJPEGImage): Do some preparation to implement
	support for libjpeg-turbo 3.X APIs while writing deep JPEG.

	* coders/tiff.c (AddIFDExifFields): Fix a compilation warning.

	* coders/jpeg.c (ReadJPEGImage): Support libjpeg-turbo 3.X APIs to
	read deep JPEG.

2024-02-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (AddIFDExifFields): Add casts to prevent signed vs
	unsigned char pointer warnings.

	* m4/ltversion.m4: Update to libtool 2.4.7.
