@@ -1,5 +1,5 @@
 #!/bin/sh
-# Copyright (C) 2004-2023 GraphicsMagick Group
+# Copyright (C) 2004-2024 GraphicsMagick Group
 . ./common.shi
 . ${top_srcdir}/tests/common.shi
 
@@ -10,7 +10,7 @@ rwblob=./rwblob
 check_types='bilevel gray palette truecolor'
 
 # Number of tests we plan to run
-test_plan_fn 213
+test_plan_fn 217
 
 # ART format
 for type in ${check_types}
@@ -114,6 +114,12 @@ done
 for type in ${check_types}
 do
   test_command_fn "GIF87 ${type}" ${MEMCHECK} ${rwblob} "${SRCDIR}/input_${type}.miff" GIF87
+done
+
+# HRZ format
+for type in ${check_types}
+do
+  test_command_fn "HRZ ${type}" ${MEMCHECK} ${rwblob} "${SRCDIR}/input_${type}.miff" HRZ
 done
 
 # JBIG format
