@@ -1,3 +1,10 @@
+2024-02-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* tests/{rwblob.tap, rwfile.tap}: Add HRZ to sanity checks.
+
+	* coders/hrz.c (RegisterHRZImage): Set 'seekable_stream' and
+	'adjoin' correctly.
+
 2024-02-21  Fojtik Jaroslav  <JaFojtik@yandex.com>
 
 	* coders/hrz.c: Provide writer.
